Basic Finster file format support

--- a/z_obj/z_obj.vcxproj
+++ b/z_obj/z_obj.vcxproj
@@ -146,6 +146,7 @@
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="space.hpp" />
     <ClInclude Include="vdfs.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
