--- a/.gitignore
+++ b/.gitignore
@@ -684,3 +684,5 @@ FodyWeavers.xsd
 # Additional files built by Visual Studio
 
 # End of https://www.toptal.com/developers/gitignore/api/c,c++,windows,linux,macos,android,visualstudio,jetbrains+all,xcode
+
+*.tga
