--- a/z_obj/z_obj.vcxproj.filters
+++ b/z_obj/z_obj.vcxproj.filters
@@ -18,12 +18,15 @@
     <ClCompile Include="main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="zen_vdfs.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="vdfs.hpp">
+    <ClInclude Include="zen_vdfs.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="space.hpp">
+    <ClInclude Include="space.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
