--- a/z_obj/z_obj.vcxproj.filters
+++ b/z_obj/z_obj.vcxproj.filters
@@ -21,12 +21,24 @@
     <ClCompile Include="zen_vdfs.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="zen_base.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="zen_world.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="zen_vdfs.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="space.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="zen_base.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="zen_world.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
