--- a/z_obj/z_obj.vcxproj.filters
+++ b/z_obj/z_obj.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="zen_world.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="ge_filesystem.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="zen_vdfs.h">
@@ -39,6 +42,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="zen_world.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ge_filesystem.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
