--- a/z_obj/z_obj.vcxproj
+++ b/z_obj/z_obj.vcxproj
@@ -143,14 +143,18 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="ge_base.cpp" />
     <ClCompile Include="ge_filesystem.cpp" />
+    <ClCompile Include="gothiclib.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="zen_base.cpp" />
     <ClCompile Include="zen_vdfs.cpp" />
     <ClCompile Include="zen_world.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="ge_base.h" />
     <ClInclude Include="ge_filesystem.h" />
+    <ClInclude Include="gothiclib.h" />
     <ClInclude Include="space.h" />
     <ClInclude Include="zen_base.h" />
     <ClInclude Include="zen_vdfs.h" />
