--- a/z_obj/z_obj.vcxproj
+++ b/z_obj/z_obj.vcxproj
@@ -149,6 +149,7 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="zen_base.cpp" />
     <ClCompile Include="zen_vdfs.cpp" />
+    <ClCompile Include="zen_visual.cpp" />
     <ClCompile Include="zen_world.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -159,6 +160,7 @@
     <ClInclude Include="space.h" />
     <ClInclude Include="zen_base.h" />
     <ClInclude Include="zen_vdfs.h" />
+    <ClInclude Include="zen_visual.h" />
     <ClInclude Include="zen_world.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
